--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.rediscover4j</groupId>
+            <artifactId>reDiscover4j</artifactId>
+            <version>0.0.1</version>
+            <scope>system</scope>
+            <systemPath>${env.RED4JCP}</systemPath>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
@@ -149,6 +156,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.10.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.rediscover4j</groupId>
+                <artifactId>reDiscover4j</artifactId>
+                <version>0.0.1</version>
             </plugin>
         </plugins>
     </build>
